Refactor print5.html: Clean up and reorganize content structure, enhance toggle functionality, and improve theme toggle feature.

--- a/history/term2/print1.html
+++ b/history/term2/print1.html
@@ -164,167 +164,157 @@
 <body>
     <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
-    <h2>革命の時代の到来</h2>
-    <h4>〇ポイント</h4>
-    ・北アメリカの13植民地は,植民地議会による自治を進めていた</br>
-    ・フレンチ＝インディアン戦争後のイギリス本国の植民地政策の転換が,13植民地の反発を生み,独立戦争にまで発展した</br>
-    ・独立戦争がヨーロッパの国際関係にも影響し,孤立したイギリスが敗れてアメリカの独立が認められた</br>
-    ・独立宣言の採択,合衆国憲法の制定などを通して,近代民主主義の原理が確立された</br>
+<h2>革命の時代の到来</h2>
+<h4>〇ポイント</h4>
+・北アメリカの13植民地は,植民地議会による自治を進めていた</br>
+・フレンチ＝インディアン戦争後のイギリス本国の植民地政策の転換が,13植民地の反発を生み,独立戦争にまで発展した</br>
+・独立戦争がヨーロッパの国際関係にも影響し,孤立したイギリスが敗れてアメリカの独立が認められた</br>
+・独立宣言の採択,合衆国憲法の制定などを通して,近代民主主義の原理が確立された</br>
 
-    <button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
-    <h3>[アメリカの独立]</h3>
-    <h4>〇北アメリカの13植民地の形成</h4>
-    ・経済上の利益や政治,宗教上の自由を求めて大西洋岸に建設</br>
-    ＝ヴァージニア(1607年)～ジョージア(1732年)までの13植民地</br>
-    ・一定の自治承認＝ヴァージニアで最初の植民地議会の開設(1619年)</br>
-    ・市民意識の成長＝早くから大学の開設や新聞の発行</br>
-    ・地域差＝北部：<span class="toggle-text" data-original-text="自営農民" onclick="toggleText(this)"></span>や<span
-        class="toggle-text" data-original-text="自営商工業者" onclick="toggleText(this)"></span>が多い</br>
-    ニューイングランド地域には多くのピューリタン</br>
-    南部：<span class="toggle-text" data-original-text="黒人奴隷" onclick="toggleText(this)"></span>を用いた大農園(<span
-        class="toggle-text" data-original-text="プランテーション" onclick="toggleText(this)"></span>)の経営</br>
-    <h4>〇本国と植民地の対立激化</h4>
-    ・イギリスの重商主義政策＝植民地の自由な商工業の発展をゆるやかに抑制</br>
-    ・七年戦争(フレンチ＝インディアン戦争)後</br>
-    ＝財政赤字を軽減するため，課税と重商主義政策の強化に転換</br>
-    1765年：<span class="toggle-text" data-original-text="印紙法"
-        onclick="toggleText(this)"></span>発布→植民地人は「代表なくして課税なし」と反発</br>
-    1773年：<span class="toggle-text" data-original-text="茶法" onclick="toggleText(this)"></span>発布→<span
-        class="toggle-text" data-original-text="ボストン茶会事件" onclick="toggleText(this)"></span>勃発→本国政府がボストン港閉鎖</br>
-    <h4>〇独立戦争の開始と独立宣言</h4>
-    ・戦争勃発＝1774年：植民地側が<span class="toggle-text" data-original-text="大陸会議"
-        onclick="toggleText(this)"></span>を開催→自治の尊重を要求</br>
-    1775年：レキシントンとコンコードで武力衝突(独立戦争の開始)</br>
-    総司令官ワシントン(植民地側)</br>
-    ・開戦時の状況＝独立派・中立派・忠誠派(国王派)が併存</br>
-    →1776年初め：トマス=ペインが<span class="toggle-text" data-original-text="コモン・センサス"
-        onclick="toggleText(this)"></span>(『常識』)出版</br>
-    ＝独立の気運を高める</br>
-    ・独立宣言＝<span class="toggle-text" data-original-text="1776年7月4日"
-        onclick="toggleText(this)"></span>：トマス=ジェファソンらがフィラデルフィアで発表</br>
-    →人間の<span class="toggle-text" data-original-text="基本的人権" onclick="toggleText(this)"></span>としての<span
-        class="toggle-text" data-original-text="自由・平等" onclick="toggleText(this)"></span>を宣言</br>
-    ＝圧政に対する人民の独立を正当化</br>
-    近代民主政治の基本原理を示す</br>
-    <h4>〇独立の達成</h4>
-    ・戦争の経過＝独立軍は当初苦戦→反イギリス諸国が植民地側を支援</br>
-    1778年：フランス・スペインが対英参戦</br>
-    1780年：武装中立同盟の結成(ロシアのエカチェリーナ2世が提唱)</br>
-    ・<span class="toggle-text" data-original-text="パリ条約"
-        onclick="toggleText(this)"></span>(1783年)＝イギリスがアメリカ合衆国の独立を承認</br>
-    ミシシッピ川以東のルイジアナを合衆国に割譲</br>
+<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
+<h3>[アメリカの独立]</h3>
+<h4>〇北アメリカの13植民地の形成</h4>
+・経済上の利益や政治,宗教上の自由を求めて大西洋岸に建設</br>
+＝ヴァージニア(1607年)～ジョージア(1732年)までの13植民地</br>
+・一定の自治承認＝ヴァージニアで最初の植民地議会の開設(1619年)</br>
+・市民意識の成長＝早くから大学の開設や新聞の発行</br>
+・地域差＝北部：<span class="toggle-text" data-original-text="自営農民" onclick="toggleText(this)"></span>や<span class="toggle-text" data-original-text="自営商工業者" onclick="toggleText(this)"></span>が多い</br>
+ニューイングランド地域には多くのピューリタン</br>
+南部：<span class="toggle-text" data-original-text="黒人奴隷" onclick="toggleText(this)"></span>を用いた大農園(<span class="toggle-text" data-original-text="プランテーション" onclick="toggleText(this)"></span>)の経営</br>
+<h4>〇本国と植民地の対立激化</h4>
+・イギリスの重商主義政策＝植民地の自由な商工業の発展をゆるやかに抑制</br>
+・七年戦争(フレンチ＝インディアン戦争)後</br>
+＝財政赤字を軽減するため，課税と重商主義政策の強化に転換</br>
+1765年：<span class="toggle-text" data-original-text="印紙法" onclick="toggleText(this)"></span>発布→植民地人は「代表なくして課税なし」と反発</br>
+1773年：<span class="toggle-text" data-original-text="茶法" onclick="toggleText(this)"></span>発布→<span class="toggle-text" data-original-text="ボストン茶会事件" onclick="toggleText(this)"></span>勃発→本国政府がボストン港閉鎖</br>
+<h4>〇独立戦争の開始と独立宣言</h4>
+・戦争勃発＝1774年：植民地側が<span class="toggle-text" data-original-text="大陸会議" onclick="toggleText(this)"></span>を開催→自治の尊重を要求</br>
+1775年：レキシントンとコンコードで武力衝突(独立戦争の開始)</br>
+総司令官ワシントン(植民地側)</br>
+・開戦時の状況＝独立派・中立派・忠誠派(国王派)が併存</br>
+→1776年初め：トマス=ペインが<span class="toggle-text" data-original-text="コモン・センス" onclick="toggleText(this)"></span>(『常識』)出版</br>
+＝独立の気運を高める</br>
+・独立宣言＝<span class="toggle-text" data-original-text="1776年7月4日" onclick="toggleText(this)"></span>：トマス=ジェファソンらがフィラデルフィアで発表</br>
+→人間の<span class="toggle-text" data-original-text="基本的人権" onclick="toggleText(this)"></span>としての<span class="toggle-text" data-original-text="自由・平等" onclick="toggleText(this)"></span>を宣言</br>
+＝圧政に対する人民の独立を正当化</br>
+近代民主政治の基本原理を示す</br>
+<h4>〇独立の達成</h4>
+・戦争の経過＝独立軍は当初苦戦→反イギリス諸国が植民地側を支援</br>
+1778年：フランス・スペインが対英参戦</br>
+1780年：武装中立同盟の結成(ロシアのエカチェリーナ2世が提唱)</br>
+・<span class="toggle-text" data-original-text="パリ条約" onclick="toggleText(this)"></span>(1783年)＝イギリスがアメリカ合衆国の独立を承認</br>
+ミシシッピ川以東のルイジアナを合衆国に割譲</br>
 
-    <button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
-    <h3>[アメリカ合衆国憲法の制定]</h3>
-    <h4>〇合衆国憲法の制定</h4>
-    ・アメリカ合衆国＝中央政府の権力が弱い，13州のゆるやかな連合国家</br>
-    政治的・経済的困難がつづく→強力な政府をつくろうとする動き</br>
-    ・<span class="toggle-text" data-original-text="憲法制定会議" onclick="toggleText(this)"></span>＝1787年：フィラデルフィアで開催→<span
-        class="toggle-text" data-original-text="合衆国憲法" onclick="toggleText(this)"></span>を制定</br>
-    <h4>〇合衆国憲法の特色</h4>
-    ・<span class="toggle-text" data-original-text="国民主権" onclick="toggleText(this)"></span>＝これに基づいた共和政</br>
-    ・<span class="toggle-text" data-original-text="連邦主義" onclick="toggleText(this)"></span>＝各州に幅広い自治,大統領と連邦議会がまとめる</br>
-    ・三権分立＝<span class="toggle-text" data-original-text="行政権" onclick="toggleText(this)"></span>：大統領の率いる政府</br>
-    <span class="toggle-text" data-original-text="立法権" onclick="toggleText(this)"></span>：上院と下院からなる連邦議会</br>
-    <span class="toggle-text" data-original-text="司法権" onclick="toggleText(this)"></span>：最高裁判所が行使</br>
-    ・その他の特色＝政治と宗教の分離，軍隊の文民統制，人民の権利の保護</br>
-    <h4>〇連邦政府の発足</h4>
-    ・憲法をめぐる対立＝連邦派(支持派)と反連邦派(批判派)とが対立→のちの政党へ</br>
-    ・連邦政府＝1789年：<span class="toggle-text" data-original-text="ワシントン" onclick="toggleText(this)"></span>を初代大統領に成立</br>
-    外交：この年におこったフランス革命とその後の戦争には中立</br>
-    内政：連邦派と反連邦派の対立がつづく。首都ワシントンの建設(1800年)</br>
-    ハミルトン(連邦派)…財務長官として，財政の基礎を固める</br>
-    <span class="toggle-text" data-original-text="ジェファソン" onclick="toggleText(this)"></span>(反連邦派)…外交を担当する国務長官に就任</br>
-    <h4>〇合衆国独立の意義と問題点</h4>
-    ・意義＝広大な領域国家での共和政実現→絶対王政のヨーロッパ諸国に衝撃</br>
-    ・問題点＝黒人奴隷制の継続→黒人の権利の無視</br>
-    アパラチア山脈以西への入植解禁→先住民の権利の無視</br>
+<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
+<h3>[アメリカ合衆国憲法の制定]</h3>
+<h4>〇合衆国憲法の制定</h4>
+・アメリカ合衆国＝中央政府の権力が弱い，13州のゆるやかな連合国家</br>
+政治的・経済的困難がつづく→強力な政府をつくろうとする動き</br>
+・<span class="toggle-text" data-original-text="憲法制定会議" onclick="toggleText(this)"></span>＝1787年：フィラデルフィアで開催→<span class="toggle-text" data-original-text="合衆国憲法" onclick="toggleText(this)"></span>を制定</br>
+<h4>〇合衆国憲法の特色</h4>
+・<span class="toggle-text" data-original-text="国民主権" onclick="toggleText(this)"></span>＝これに基づいた共和政</br>
+・<span class="toggle-text" data-original-text="連邦主義" onclick="toggleText(this)"></span>＝各州に幅広い自治,大統領と連邦議会がまとめる</br>
+・三権分立＝<span class="toggle-text" data-original-text="行政権" onclick="toggleText(this)"></span>：大統領の率いる政府</br>
+<span class="toggle-text" data-original-text="立法権" onclick="toggleText(this)"></span>：上院と下院からなる連邦議会</br>
+<span class="toggle-text" data-original-text="司法権" onclick="toggleText(this)"></span>：最高裁判所が行使</br>
+・その他の特色＝政治と宗教の分離，軍隊の文民統制，人民の権利の保護</br>
+<h4>〇連邦政府の発足</h4>
+・憲法をめぐる対立＝連邦派(支持派)と反連邦派(批判派)とが対立→のちの政党へ</br>
+・連邦政府＝1789年：<span class="toggle-text" data-original-text="ワシントン" onclick="toggleText(this)"></span>を初代大統領に成立</br>
+外交：この年におこったフランス革命とその後の戦争には中立</br>
+内政：連邦派と反連邦派の対立がつづく。首都ワシントンの建設(1800年)</br>
+ハミルトン(連邦派)…財務長官として，財政の基礎を固める</br>
+<span class="toggle-text" data-original-text="ジェファソン" onclick="toggleText(this)"></span>(反連邦派)…外交を担当する国務長官に就任</br>
+<h4>〇合衆国独立の意義と問題点</h4>
+・意義＝広大な領域国家での共和政実現→絶対王政のヨーロッパ諸国に衝撃</br>
+・問題点＝黒人奴隷制の継続→黒人の権利の無視</br>
+アパラチア山脈以西への入植解禁→先住民の権利の無視</br>
 
-    <p>
-        <a href="print1.html">⑫革命の時代の到来</a>・
-        <a href="print2.html">④自由主義と国民主義の進展</a>・
-        <a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
-        <a href="print4.html">日本史前提知識</a>・
-        <a href="print5.html">①開国と開港</a>
-    </p>
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
 
-    <script>
-        // 初期化：全てを非表示（空白）に
-        document.addEventListener("DOMContentLoaded", () => {
-            document.querySelectorAll(".toggle-text").forEach(el => {
-                const original = el.dataset.originalText;
-                for (let hitomoji of original) {
-                    if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
-                        el.textContent += "　";
-                    } else {
-                        el.textContent += " ";
-                    }
-                }
-            });
-        });
+<script>
+	// 初期化：全てを非表示（空白）に
+	document.addEventListener("DOMContentLoaded", () => {
+		document.querySelectorAll(".toggle-text").forEach(el => {
+			const original = el.dataset.originalText;
+			for (let hitomoji of original) {
+				if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
+					el.textContent += "　";
+				} else {
+					el.textContent += " ";
+				}
+			}
+		});
+	});
 
-        // 個別トグル
-        function toggleText(el) {
-            const original = el.dataset.originalText;
-            if (el.textContent.trim() === "") {
-                el.textContent = original;
-            } else {
-                el.textContent = "";
-                for (let hitomoji of original) {
-                    if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
-                        el.textContent += "　";
-                    } else {
-                        el.textContent += " ";
-                    }
-                }
-            }
-        }
+	// 個別トグル
+	function toggleText(el) {
+		const original = el.dataset.originalText;
+		if (el.textContent.trim() === "") {
+			el.textContent = original;
+		} else {
+			el.textContent = "";
+			for (let hitomoji of original) {
+				if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
+					el.textContent += "　";
+				} else {
+					el.textContent += " ";
+				}
+			}
+		}
+	}
 
-        // 全体の表示状態を保持
-        let allVisible = false;
+	// 全体の表示状態を保持
+	let allVisible = false;
 
-        // 一括表示/非表示トグル
-        function toggleAll() {
-            const elements = document.querySelectorAll(".toggle-text");
-            const buttons = document.querySelectorAll(".toggle-all-btn"); // 複数のボタンを取得
+	// 一括表示/非表示トグル
+	function toggleAll() {
+		const elements = document.querySelectorAll(".toggle-text");
+		const buttons = document.querySelectorAll(".toggle-all-btn"); // 複数のボタンを取得
 
-            elements.forEach(el => {
-                const original = el.dataset.originalText;
-                if (allVisible) {
-                    el.textContent = "";
-                    for (let hitomoji of original) {
-                        if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
-                            el.textContent += "　";
-                        } else {
-                            el.textContent += " ";
-                        }
-                    }
-                } else {
-                    el.textContent = original; // 表示に
-                }
-            });
+		elements.forEach(el => {
+			const original = el.dataset.originalText;
+			if (allVisible) {
+				el.textContent = "";
+				for (let hitomoji of original) {
+					if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
+						el.textContent += "　";
+					} else {
+						el.textContent += " ";
+					}
+				}
+			} else {
+				el.textContent = original; // 表示に
+			}
+		});
 
-            allVisible = !allVisible;
+		allVisible = !allVisible;
 
-            // すべてのボタンのテキストを更新
-            buttons.forEach(button => {
-                button.textContent = allVisible ? "すべて非表示にする" : "すべて表示する";
-            });
-        }
+		// すべてのボタンのテキストを更新
+		buttons.forEach(button => {
+			button.textContent = allVisible ? "すべて非表示にする" : "すべて表示する";
+		});
+	}
 
-        //ダーク/ライトモード
-        function toggleTheme() {
-            const body = document.body;
-            const themeBtn = document.querySelector('.theme-toggle');
+	//ダーク/ライトモード
+	function toggleTheme() {
+		const body = document.body;
+		const themeBtn = document.querySelector('.theme-toggle');
 
-            if (body.classList.contains('light-mode')) {
-                body.classList.remove('light-mode');
-                themeBtn.textContent = '🌙';
-            } else {
-                body.classList.add('light-mode');
-                themeBtn.textContent = '☀️';
-            }
-        }
-    </script>
+		if (body.classList.contains('light-mode')) {
+			body.classList.remove('light-mode');
+			themeBtn.textContent = '🌙';
+		} else {
+			body.classList.add('light-mode');
+			themeBtn.textContent = '☀️';
+		}
+	}
+</script>
 
 </body>
