--- a/history/term2/print2.html
+++ b/history/term2/print2.html
@@ -164,179 +164,169 @@
 <body>
     <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
-    <h2>自由主義と国民主義の進展</h2>
-    <h4>〇ポイント</h4>
-    ・フランス革命に刺激され,ラテンアメリカでは植民地社会の構造に反発して諸国が独立したが,英米両国への経済的従属が進んだ</br>
-    ・アメリカ合衆国は19世紀前半に経済的な自立を達成し,領土の拡張を進めて西部の開拓を進展させた</br>
-    ・1861年にアメリカ合衆国では南北戦争がおこったが,北部が勝利し,分裂の危機は回避された</br>
-    ・南北戦争後のアメリカの資本主義は発展し,多様な人的構成をみせるアメリカ社会が形成された</br>
+<h2>自由主義と国民主義の進展</h2>
+<h4>〇ポイント</h4>
+・フランス革命に刺激され,ラテンアメリカでは植民地社会の構造に反発して諸国が独立したが,英米両国への経済的従属が進んだ</br>
+・アメリカ合衆国は19世紀前半に経済的な自立を達成し,領土の拡張を進めて西部の開拓を進展させた</br>
+・1861年にアメリカ合衆国では南北戦争がおこったが,北部が勝利し,分裂の危機は回避された</br>
+・南北戦争後のアメリカの資本主義は発展し,多様な人的構成をみせるアメリカ社会が形成された</br>
 
-    <button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
-    <h3>[ラテンアメリカ諸国の独立]</h3>
-    <h4>〇ハイチの独立</h4>
-    ・イスパニョーラ島＝17世紀末フランス領,18世紀からサトウキビ栽培</br>
-    →黒人奴隷が増加</br>
-    トゥサン=ルヴェルチュールを指導者に奴隷解放運動の開始</br>
-    →初の黒人共和国<span class="toggle-text" data-original-text="ハイチ" onclick="toggleText(this)"></span>が誕生(1804年)</br>
-    黒人奴隷制の廃止</br>
-    ・イギリスで奴隷貿易廃止(1807年)→同植民地で奴隷制廃止(33年)</br>
-    奴隷制維持のアメリカ合衆国やブラジルに衝撃を与える</br>
-    <h4>〇ラテンアメリカ諸国の独立(1810～20年代)</h4>
-    ・背景＝ナポレオン時代の<span class="toggle-text" data-original-text="スペイン本国の支配力の低下" onclick="toggleText(this)"></span></br>
-    ・運動の中心＝大地主層である植民地生まれの白人：<span class="toggle-text" data-original-text="クリオーリョ"
-        onclick="toggleText(this)"></span></br>
-    南米北部：指導者<span class="toggle-text" data-original-text="シモン＝ボリバル" onclick="toggleText(this)"></span>らにより独立</br>
-    南米南部：指導者サン=マルティンらにより独立</br>
-    メキシコ：司祭イダルゴの蜂起(1810年)→21年に独立,23年に共和国へ</br>
-    ブラジル：ポルトガル王子が皇帝,帝国として独立(1822年)→のち共和国へ(89年)</br>
-    ・メッテルニヒの干渉の動き←イギリスが反対</br>
-    ・アメリカ大統領モンローが<span class="toggle-text" data-original-text="モンロー主義"
-        onclick="toggleText(this)"></span>を発表し,ラテンアメリカ諸国の独立を間接的に支援</br>
-    ・独立後＝共和政を導入(ブラジルは帝政になったあと共和政),クリオーリョらの自由貿易政策</br>
-    →英米に経済的従属(<span class="toggle-text" data-original-text="原料・食料"
-        onclick="toggleText(this)"></span>の輸出地域へ)：ラテンアメリカ諸国の工業化の大幅な遅れ</br>
+<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
+<h3>[ラテンアメリカ諸国の独立]</h3>
+<h4>〇ハイチの独立</h4>
+・イスパニョーラ島＝17世紀末フランス領,18世紀からサトウキビ栽培</br>
+→黒人奴隷が増加</br>
+トゥサン=ルヴェルチュールを指導者に奴隷解放運動の開始</br>
+→初の黒人共和国<span class="toggle-text" data-original-text="ハイチ" onclick="toggleText(this)"></span>が誕生(1804年)</br>
+黒人奴隷制の廃止</br>
+・イギリスで奴隷貿易廃止(1807年)→同植民地で奴隷制廃止(33年)</br>
+奴隷制維持のアメリカ合衆国やブラジルに衝撃を与える</br>
+<h4>〇ラテンアメリカ諸国の独立(1810～20年代)</h4>
+・背景＝ナポレオン時代の<span class="toggle-text" data-original-text="スペイン本国の支配力の低下" onclick="toggleText(this)"></span></br>
+・運動の中心＝大地主層である植民地生まれの白人：<span class="toggle-text" data-original-text="クリオーリョ" onclick="toggleText(this)"></span></br>
+南米北部：指導者<span class="toggle-text" data-original-text="シモン＝ボリバル" onclick="toggleText(this)"></span>らにより独立</br>
+南米南部：指導者サン=マルティンらにより独立</br>
+メキシコ：司祭イダルゴの蜂起(1810年)→21年に独立,23年に共和国へ</br>
+ブラジル：ポルトガル王子が皇帝,帝国として独立(1822年)→のち共和国へ(89年)</br>
+・メッテルニヒの干渉の動き←イギリスが反対</br>
+・アメリカ大統領モンローが<span class="toggle-text" data-original-text="モンロー主義" onclick="toggleText(this)"></span>を発表し,ラテンアメリカ諸国の独立を間接的に支援</br>
+・独立後＝共和政を導入(ブラジルは帝政になったあと共和政),クリオーリョらの自由貿易政策</br>
+→英米に経済的従属(<span class="toggle-text" data-original-text="原料・食料" onclick="toggleText(this)"></span>の輸出地域へ)：ラテンアメリカ諸国の工業化の大幅な遅れ</br>
 
-    <button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
-    <h3>[アメリカ合衆国の領土拡張]</h3>
-    <h4>〇1820年代までのアメリカ合衆国</h4>
-    ・<span class="toggle-text" data-original-text="ジェファソン"
-        onclick="toggleText(this)"></span>時代＝1800年：反連邦派を率いて大統領に当選</br>
-    (第3代大統領)1803年：フランスからミシシッピ川以西のルイジアナを購入</br>
-    ヨーロッパのフランス革命～ナポレオン戦争に対しては中立を維持</br>
-    ・<span class="toggle-text" data-original-text="アメリカ=イギリス戦争" onclick="toggleText(this)"></span>(1812～14年)</br>
-    ＝原因：イギリスが海上封鎖でアメリカ合衆国の通商を妨害</br>
-    経過：ナポレオンの没落とともに勝敗なしで終了</br>
-    結果：国民意識の高揚とアメリカ合衆国自体の工業化の促進</br>
-    ・<span class="toggle-text" data-original-text="モンロー" onclick="toggleText(this)"></span>時代＝1819年：スペインからフロリダを購入</br>
-    (第5代大統領)1823年：モンロー主義を発表し,ラテンアメリカ諸国の独立を支持</br>
-    アメリカ合衆国とヨーロッパ両大陸間の<span class="toggle-text" data-original-text="相互干渉" onclick="toggleText(this)"></span>を表明</br>
-    ※その後長らくアメリカ合衆国外交政策の基本となる</br>
-    <h4>〇<span class="toggle-text" data-original-text="ジャクソン" onclick="toggleText(this)"></span>時代(1830年代：第7代大統領)</h4>
-    ・民主主義の拡大＝初の西部出身大統領→農民や都市下層民重視</br>
-    ＝すべての白人男性に選挙権を与える</br>
-    ・政党政治の基礎＝南部基盤の民主党の結成を促進→北部基盤のホイッグ党に対抗</br>
-    ・先住民政策＝ミシシッピ川以西の保留地への強制移住策(強制移住法：1830年)</br>
-    ：西部開拓＝「西漸運動」の加速と，先住民の強い抵抗</br>
-    <h4>〇大陸国家の完成(1840年代)</h4>
-    ・<span class="toggle-text" data-original-text="明白な天命"
-        onclick="toggleText(this)"></span>＝白人の西部開拓を神から与えられた使命と正当化する考え</br>
-    ・領土拡大＝1845年：テキサスを併合→<span class="toggle-text" data-original-text="アメリカ=メキシコ戦争"
-        onclick="toggleText(this)"></span>が勃発(1846～48年)</br>
-    1846年：オレゴンの南半分を獲得(イギリスとの共同管理地の分割による)</br>
-    1848年：カリフォルニアを獲得(アメリカ=メキシコ戦争の勝利の結果)</br>
-    ⇒大西洋から太平洋にいたる大陸国家を形成</br>
-    ※次いで,太平洋への関心増大</br>
-    日本進出＝ペリーの来航(1853年),日米和親条約の締結(54年)：日本の開国</br>
-    アラスカ＝1867年にロシアから買収</br>
+<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
+<h3>[アメリカ合衆国の領土拡張]</h3>
+<h4>〇1820年代までのアメリカ合衆国</h4>
+・<span class="toggle-text" data-original-text="ジェファソン" onclick="toggleText(this)"></span>時代＝1800年：反連邦派を率いて大統領に当選</br>
+(第3代大統領)1803年：フランスからミシシッピ川以西のルイジアナを購入</br>
+ヨーロッパのフランス革命～ナポレオン戦争に対しては中立を維持</br>
+・<span class="toggle-text" data-original-text="アメリカ=イギリス戦争" onclick="toggleText(this)"></span>(1812～14年)</br>
+＝原因：イギリスが海上封鎖でアメリカ合衆国の通商を妨害</br>
+経過：ナポレオンの没落とともに勝敗なしで終了</br>
+結果：国民意識の高揚とアメリカ合衆国自体の工業化の促進</br>
+・<span class="toggle-text" data-original-text="モンロー" onclick="toggleText(this)"></span>時代＝1819年：スペインからフロリダを購入</br>
+(第5代大統領)1823年：モンロー主義を発表し,ラテンアメリカ諸国の独立を支持</br>
+アメリカ合衆国とヨーロッパ両大陸間の<span class="toggle-text" data-original-text="相互不干渉" onclick="toggleText(this)"></span>を表明</br>
+※その後長らくアメリカ合衆国外交政策の基本となる</br>
+<h4>〇<span class="toggle-text" data-original-text="ジャクソン" onclick="toggleText(this)"></span>時代(1830年代：第7代大統領)</h4>
+・民主主義の拡大＝初の西部出身大統領→農民や都市下層民重視</br>
+＝すべての白人男性に選挙権を与える</br>
+・政党政治の基礎＝南部基盤の民主党の結成を促進→北部基盤のホイッグ党に対抗</br>
+・先住民政策＝ミシシッピ川以西の保留地への強制移住策(強制移住法：1830年)</br>
+：西部開拓＝「西漸運動」の加速と，先住民の強い抵抗</br>
+<h4>〇大陸国家の完成(1840年代)</h4>
+・<span class="toggle-text" data-original-text="明白な天命" onclick="toggleText(this)"></span>＝白人の西部開拓を神から与えられた使命と正当化する考え</br>
+・領土拡大＝1845年：テキサスを併合→<span class="toggle-text" data-original-text="アメリカ=メキシコ戦争" onclick="toggleText(this)"></span>が勃発(1846～48年)</br>
+1846年：オレゴンの南半分を獲得(イギリスとの共同管理地の分割による)</br>
+1848年：カリフォルニアを獲得(アメリカ=メキシコ戦争の勝利の結果)</br>
+⇒大西洋から太平洋にいたる大陸国家を形成</br>
+※次いで,太平洋への関心増大</br>
+日本進出＝ペリーの来航(1853年),日米和親条約の締結(54年)：日本の開国</br>
+アラスカ＝1867年にロシアから買収</br>
 
-    <button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
-    <h3>[南北戦争と19世紀のアメリカ合衆国]</h3>
-    <h4>〇南北戦争の背景</h4>
-    ・奴隷制をめぐる動き＝1820年：ミズーリ協定(北緯36度30分以北の新州は自由州)</br>
-    1854年：カンザス・ネブラスカ法(奴隷制の選択は住民の投票で決定)</br>
-    →奴隷制反対をとなえる<span class="toggle-text" data-original-text="共和党" onclick="toggleText(this)"></span>が成立</br>
-    <h4>〇南北戦争(1861～65年)</h4>
-    ・原因＝1860年：大統領選挙で共和党の<span class="toggle-text" data-original-text="リンカン"
-        onclick="toggleText(this)"></span>が当選,南部諸州は分離を決定</br>
-    1861年：南部が<span class="toggle-text" data-original-text="アメリカ連合国"
-        onclick="toggleText(this)"></span>を結成(大統領ジェファソン=デヴィス)</br>
-    ・経過＝1861年：開戦,リー将軍の活躍などで初め南軍が優勢</br>
-    1863年：リンカンが<span class="toggle-text" data-original-text="奴隷会法宣言"
-        onclick="toggleText(this)"></span>を発表,南部の戦力を弱め,イギリスの干渉を防ぐ</br>
-    ゲティスバーグの戦いで勝利,以後，北軍が優勢へ</br>
-    ・結果＝1865年：南部の首都リッチモンドが陥落し,南軍降伏→合衆国の再統一</br>
-    <h4>〇南北戦争後のアメリカ合衆国</h4>
-    ・<span class="toggle-text" data-original-text="大陸横断鉄道"
-        onclick="toggleText(this)"></span>の建設→西部開拓の進展,牧畜・農業・工業の発展</br>
-    <span class="toggle-text" data-original-text="フロンティアの消滅" onclick="toggleText(this)"></span>を宣言(1890年代)</br>
-    ・世界中から多様な移民(宗教・言語・生活習慣)の受け入れ→独自の民主主義社会を形成</br>
-    ⇔先住民・奴隷に対する差別の残存</br>
+<button class="toggle-all-btn" onclick="toggleAll()">すべて表示する</button>
+<h3>[南北戦争と19世紀のアメリカ合衆国]</h3>
+<h4>〇南北戦争の背景</h4>
+・奴隷制をめぐる動き＝1820年：ミズーリ協定(北緯36度30分以北の新州は自由州)</br>
+1854年：カンザス・ネブラスカ法(奴隷制の選択は住民の投票で決定)</br>
+→奴隷制反対をとなえる<span class="toggle-text" data-original-text="共和党" onclick="toggleText(this)"></span>が成立</br>
+<h4>〇南北戦争(1861～65年)</h4>
+・原因＝1860年：大統領選挙で共和党の<span class="toggle-text" data-original-text="リンカン" onclick="toggleText(this)"></span>が当選,南部諸州は分離を決定</br>
+1861年：南部が<span class="toggle-text" data-original-text="アメリカ連合国" onclick="toggleText(this)"></span>を結成(大統領ジェファソン=デヴィス)</br>
+・経過＝1861年：開戦,リー将軍の活躍などで初め南軍が優勢</br>
+1863年：リンカンが<span class="toggle-text" data-original-text="奴隷会法宣言" onclick="toggleText(this)"></span>を発表,南部の戦力を弱め,イギリスの干渉を防ぐ</br>
+ゲティスバーグの戦いで勝利,以後，北軍が優勢へ</br>
+・結果＝1865年：南部の首都リッチモンドが陥落し,南軍降伏→合衆国の再統一</br>
+<h4>〇南北戦争後のアメリカ合衆国</h4>
+・<span class="toggle-text" data-original-text="大陸横断鉄道" onclick="toggleText(this)"></span>の建設→西部開拓の進展,牧畜・農業・工業の発展</br>
+<span class="toggle-text" data-original-text="フロンティアの消滅" onclick="toggleText(this)"></span>を宣言(1890年代)</br>
+・世界中から多様な移民(宗教・言語・生活習慣)の受け入れ→独自の民主主義社会を形成</br>
+⇔先住民・奴隷に対する差別の残存</br>
 
-    <p>
-        <a href="print1.html">⑫革命の時代の到来</a>・
-        <a href="print2.html">④自由主義と国民主義の進展</a>・
-        <a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
-        <a href="print4.html">日本史前提知識</a>・
-        <a href="print5.html">①開国と開港</a>
-    </p>
+<p>
+	<a href="print1.html">⑫革命の時代の到来</a>・
+	<a href="print2.html">④自由主義と国民主義の進展</a>・
+	<a href="print3.html">⑤帝国主義の成立と列強の情勢</a>・
+	<a href="print4.html">日本史前提知識</a>・
+	<a href="print5.html">①開国と開港</a>
+</p>
 
-    <script>
-        // 初期化：全てを非表示（空白）に
-        document.addEventListener("DOMContentLoaded", () => {
-            document.querySelectorAll(".toggle-text").forEach(el => {
-                const original = el.dataset.originalText;
-                for (let hitomoji of original) {
-                    if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
-                        el.textContent += "　";
-                    } else {
-                        el.textContent += " ";
-                    }
-                }
-            });
-        });
+<script>
+	// 初期化：全てを非表示（空白）に
+	document.addEventListener("DOMContentLoaded", () => {
+		document.querySelectorAll(".toggle-text").forEach(el => {
+			const original = el.dataset.originalText;
+			for (let hitomoji of original) {
+				if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
+					el.textContent += "　";
+				} else {
+					el.textContent += " ";
+				}
+			}
+		});
+	});
 
-        // 個別トグル
-        function toggleText(el) {
-            const original = el.dataset.originalText;
-            if (el.textContent.trim() === "") {
-                el.textContent = original;
-            } else {
-                el.textContent = "";
-                for (let hitomoji of original) {
-                    if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
-                        el.textContent += "　";
-                    } else {
-                        el.textContent += " ";
-                    }
-                }
-            }
-        }
+	// 個別トグル
+	function toggleText(el) {
+		const original = el.dataset.originalText;
+		if (el.textContent.trim() === "") {
+			el.textContent = original;
+		} else {
+			el.textContent = "";
+			for (let hitomoji of original) {
+				if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
+					el.textContent += "　";
+				} else {
+					el.textContent += " ";
+				}
+			}
+		}
+	}
 
-        // 全体の表示状態を保持
-        let allVisible = false;
+	// 全体の表示状態を保持
+	let allVisible = false;
 
-        // 一括表示/非表示トグル
-        function toggleAll() {
-            const elements = document.querySelectorAll(".toggle-text");
-            const buttons = document.querySelectorAll(".toggle-all-btn"); // 複数のボタンを取得
+	// 一括表示/非表示トグル
+	function toggleAll() {
+		const elements = document.querySelectorAll(".toggle-text");
+		const buttons = document.querySelectorAll(".toggle-all-btn"); // 複数のボタンを取得
 
-            elements.forEach(el => {
-                const original = el.dataset.originalText;
-                if (allVisible) {
-                    el.textContent = "";
-                    for (let hitomoji of original) {
-                        if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
-                            el.textContent += "　";
-                        } else {
-                            el.textContent += " ";
-                        }
-                    }
-                } else {
-                    el.textContent = original; // 表示に
-                }
-            });
+		elements.forEach(el => {
+			const original = el.dataset.originalText;
+			if (allVisible) {
+				el.textContent = "";
+				for (let hitomoji of original) {
+					if (hitomoji.match(/^[^\x01-\x7E\xA1-\xDF]+$/)) {
+						el.textContent += "　";
+					} else {
+						el.textContent += " ";
+					}
+				}
+			} else {
+				el.textContent = original; // 表示に
+			}
+		});
 
-            allVisible = !allVisible;
+		allVisible = !allVisible;
 
-            // すべてのボタンのテキストを更新
-            buttons.forEach(button => {
-                button.textContent = allVisible ? "すべて非表示にする" : "すべて表示する";
-            });
-        }
+		// すべてのボタンのテキストを更新
+		buttons.forEach(button => {
+			button.textContent = allVisible ? "すべて非表示にする" : "すべて表示する";
+		});
+	}
 
-        //ダーク/ライトモード
-        function toggleTheme() {
-            const body = document.body;
-            const themeBtn = document.querySelector('.theme-toggle');
+	//ダーク/ライトモード
+	function toggleTheme() {
+		const body = document.body;
+		const themeBtn = document.querySelector('.theme-toggle');
 
-            if (body.classList.contains('light-mode')) {
-                body.classList.remove('light-mode');
-                themeBtn.textContent = '🌙';
-            } else {
-                body.classList.add('light-mode');
-                themeBtn.textContent = '☀️';
-            }
-        }
-    </script>
+		if (body.classList.contains('light-mode')) {
+			body.classList.remove('light-mode');
+			themeBtn.textContent = '🌙';
+		} else {
+			body.classList.add('light-mode');
+			themeBtn.textContent = '☀️';
+		}
+	}
+</script>
 
 </body>
