プロ言前期末追記

--- a/programming_language/term2.html
+++ b/programming_language/term2.html
@@ -52,13 +52,58 @@
 
     <table aligin="center">
         <tr>
+            <td><span class="toggle-text" data-original-text="クラス" onclick="toggleText(this)"></span></td>
+            <td>Javaのプログラムは何の集まりか。</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="フィールド変数" onclick="toggleText(this)"></span></td>
+            <td>クラスはメソッドと何で構成されているか。</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="static" onclick="toggleText(this)"></span></td>
+            <td>クラスメソッドにするためには、なんという修飾子をつけなければならないか。</td>
+        </tr>
+
+        <tr>
             <td><span class="toggle-text" data-original-text="new" onclick="toggleText(this)"></span></td>
             <td>インスタンス生成のための演算子</td>
         </tr>
 
         <tr>
-            <td><span class="toggle-text" data-original-text="BufferedReader" onclick="toggleText(this)"></span></td>
-            <td></td><!--TODO ファイル入出力関連のもの-->
+            <td><span class="toggle-text" data-original-text="コンストラクタ" onclick="toggleText(this)"></span></td>
+            <td>クラスが生成されると同時に実行され、主にインスタンスの初期化に使われる、クラスと同名のメソッド</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="this" onclick="toggleText(this)"></span></td>
+            <td>主にインスタンスメソッドで使用される、仮引数の名前とフィールド変数を区別するためにつけるキーワードは？</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="BufferedReader()" onclick="toggleText(this)"></span></td>
+            <td>バッファ付き入力を実現するクラス</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="FileReader()" onclick="toggleText(this)"></span></td>
+            <td>ファイルを読み込むためのクラス</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="PrintWriter()" onclick="toggleText(this)"></span></td>
+            <td>printやprintln,printfメソッド等を使用してファイルを書き込めるようにするクラス</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="BufferedWriter()" onclick="toggleText(this)"></span></td>
+            <td>バッファ付き出力を実現するクラス</td>
+        </tr>
+
+        <tr>
+            <td><span class="toggle-text" data-original-text="FileWriter()" onclick="toggleText(this)"></span></td>
+            <td>ファイルを書き込むためのクラス</td>
         </tr>
         
     </table>
