--- a/english/term2/wordlist.html
+++ b/english/term2/wordlist.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>すべて表示／非表示切り替え</title>
     <style>
         body {
