--- a/japanese/term2/kanji_3.html
+++ b/japanese/term2/kanji_3.html
@@ -170,11 +170,11 @@
 	</table>
 
 	<p>
-		<a href="japanese/term2/kanji_1.html">漢字テスト①</a>・
-		<a href="japanese/term2/kanji_2.html">漢字テスト②</a>・
-		<a href="japanese/term2/kanji_3.html">漢字テスト③</a>・
-		<a href="japanese/term2/kanji_4.html">漢字テスト④</a>・
-		<a href="japanese/term2/kanji_5.html">漢字テスト⑤</a>
+		<a href="kanji_1.html">漢字テスト①</a>・
+		<a href="kanji_2.html">漢字テスト②</a>・
+		<a href="kanji_3.html">漢字テスト③</a>・
+		<a href="kanji_4.html">漢字テスト④</a>・
+		<a href="kanji_5.html">漢字テスト⑤</a>
 	</p>
 
 	<script>
